新增了一些配置项，不改动代码也可直接使用了

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,12 +1,20 @@
-#帖子的URL 具体id可以作为入参
+#帖子的URL 具体id可以作为入参（必填）
 baseUrl=http://coursebbs.open.com.cn/forum.php?mod=post&action=reply&fid=519&tid=
-#登录地址
+#登录地址（必填）
 loginUrl=http://coursebbs.open.com.cn
-#通过开发者工具获得的本地cookie
-yourCookeie=b_t_s_100200=5f4c7430-b58d-4956-9ff8-1a94f16633da; up_first_date=2019-12-02; up_beacon_user_id_100200=xuzhe431802; up_beacon_uni_id_100200=10055; Hm_lvt_7a9892f9dfe3da76cedd12e5d2304c83=1576567421,1576569796,1576570808,1576633595; Oe7Z_2132_sid=uTUTfm; Oe7Z_2132_saltkey=O4ee6458; Oe7Z_2132_lastvisit=1576565854; Oe7Z_2132_lastact=1576635629%09misc.php%09patch; Oe7Z_2132_ulastactivity=2700KZetSslgYxEQNBLX7Xkue9RKSb66R4Hl1szwUrBOpSkk3zV2; Oe7Z_2132_lastcheckfeed=302059%7C1576569485; Oe7Z_2132_nofavfid=1; Oe7Z_2132_forum_lastvisit=D_519_1576633819; Oe7Z_2132_smile=1D1; Hm_lpvt_946766664d58c814a94301842a7a73fb=1575021759; up_page_stime_test=1575021591053; up_beacon_vist_count_test=2; up_beacon_id_test=c8afd9f7-6d32-47b1-a62b-e730e411b863-1571114925648; up_beacon_id_100200=c32f38c4-de2d-4749-bc30-812e17389dd3-1571190952042; Hm_lpvt_7a9892f9dfe3da76cedd12e5d2304c83=1576635629; up_page_stime_100201=1574389608590; up_beacon_vist_count_100201=1; up_beacon_id_100201=646e4777-6b3f-4723-9f43-638d20b1a741-1574389608599; up_page_stime_100200=1576633585699; up_beacon_vist_count_100200=92; Oe7Z_2132_st_p=302059%7C1576635628%7C4cad24f99088dd06eb8cccde32922a30; Oe7Z_2132_viewid=tid_150269; Oe7Z_2132_seccode=57.cfb175bb07f6247945; Oe7Z_2132_auth=c5ebeXB73fim7zJqXwui5EW%2Fx4AHP6Rxp3mgs%2BqGOU3sbkfyJAojQZh6lU0JgScARWXDN%2BQOm6pL7PyI5DNg2djb9Vo; Oe7Z_2132_lip=60.191.0.180%2C1576635618; Oe7Z_2132_st_t=302059%7C1576633819%7C1cfe9570adb526b3e6f0b95ba48c20d9; Oe7Z_2132_home_diymode=1; Oe7Z_2132_ignore_notice=1
-#用户名
+#通过开发者工具获得的本地cookie（手动模式必填）
+yourCookie=b_t_s_100200=5f4c7430-b58d-4956-9ff8-1a94f16633da; up_first_date=2019-12-02; up_beacon_user_id_100200=xuzhe431802; up_beacon_uni_id_100200=10055; Hm_lvt_7a9892f9dfe3da76cedd12e5d2304c83=1576567421,1576569796,1576570808,1576633595; Oe7Z_2132_sid=uTUTfm; Oe7Z_2132_saltkey=O4ee6458; Oe7Z_2132_lastvisit=1576565854; Oe7Z_2132_lastact=1576635629%09misc.php%09patch; Oe7Z_2132_ulastactivity=2700KZetSslgYxEQNBLX7Xkue9RKSb66R4Hl1szwUrBOpSkk3zV2; Oe7Z_2132_lastcheckfeed=302059%7C1576569485; Oe7Z_2132_nofavfid=1; Oe7Z_2132_forum_lastvisit=D_519_1576633819; Oe7Z_2132_smile=1D1; Hm_lpvt_946766664d58c814a94301842a7a73fb=1575021759; up_page_stime_test=1575021591053; up_beacon_vist_count_test=2; up_beacon_id_test=c8afd9f7-6d32-47b1-a62b-e730e411b863-1571114925648; up_beacon_id_100200=c32f38c4-de2d-4749-bc30-812e17389dd3-1571190952042; Hm_lpvt_7a9892f9dfe3da76cedd12e5d2304c83=1576635629; up_page_stime_100201=1574389608590; up_beacon_vist_count_100201=1; up_beacon_id_100201=646e4777-6b3f-4723-9f43-638d20b1a741-1574389608599; up_page_stime_100200=1576633585699; up_beacon_vist_count_100200=92; Oe7Z_2132_st_p=302059%7C1576635628%7C4cad24f99088dd06eb8cccde32922a30; Oe7Z_2132_viewid=tid_150269; Oe7Z_2132_seccode=57.cfb175bb07f6247945; Oe7Z_2132_auth=c5ebeXB73fim7zJqXwui5EW%2Fx4AHP6Rxp3mgs%2BqGOU3sbkfyJAojQZh6lU0JgScARWXDN%2BQOm6pL7PyI5DNg2djb9Vo; Oe7Z_2132_lip=60.191.0.180%2C1576635618; Oe7Z_2132_st_t=302059%7C1576633819%7C1cfe9570adb526b3e6f0b95ba48c20d9; Oe7Z_2132_home_diymode=1; Oe7Z_2132_ignore_notice=1
+#formhash值（手动模式必填）
+formhash=d9afd44d
+#用户名（自动模式必填）
 username=xuzhe431802
-#密码
+#密码（自动模式必填）
 password=5431802
-#开始id
+#开始的帖子id（必填）
 startId=150317
+#单次刷帖数（必填）
+number=1000
+#模式：auto为自动登录模式，manual为手动设定cookie（必填）
+pattern=auto
+#回帖内容（必填）
+message=学习快乐
