修复了一个小bug

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -10,8 +10,8 @@ formhash=d9afd44d
 username=xuzhe431802
 #密码（自动模式必填）
 password=5431802
-#开始的帖子id（必填）
-startId=150317
+#开始的帖子id（必填）150691
+startId=150691
 #单次刷帖数（必填）
 number=1000
 #模式：auto为自动登录模式，manual为手动设定cookie（必填）
