更新了一个牛逼的模式，快刷模式！无痕快刷，亲测每分钟150左右，建议找一个坟贴，然后找其中一个很久没有登录过的回复进行操作，不会把帖子顶起来，也不增加自身除积分外的任何数据，基本做到无痕，管理员也很难查

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -10,11 +10,16 @@ formhash=d9afd44d
 username=xuzhe431802
 #密码（自动模式必填）
 password=5431802
-#开始的帖子id（必填）150691
-startId=150691
+#开始的帖子id（必填）
+startId=153561
 #单次刷帖数（必填）
-number=1000
-#模式：auto为自动登录模式，manual为手动设定cookie（必填）
-pattern=auto
+number=100000
+#模式：auto 为自动登录模式，manual 为手动设定cookie，quick 为快刷模式（必填）
+pattern=quick
 #回帖内容（必填）
-message=学习快乐
+#message=\u52a0\u6cb9\u554a\uff0c\u5b66\u4e60\u5feb\u4e50
+message=.
+#帖子id（快刷模式必填，请从开发者工具寻找）
+tid=41739
+#回复id（快刷模式必填，请从开发者工具寻找）
+pid=226579
